working on overflow mobile scroll issue

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -88,10 +88,12 @@
   }
 
   html {
-    position: fixed;
     font-family: "Exo", sans-serif;
     height: 100%;
     background-color: black;
+    position: fixed;
+    width: 100%;
+    overflow: hidden;
   }
 
   body {
@@ -101,10 +103,22 @@
     background-color: black;
     width: 100%;
     height: 100%;
-    /* Allow vertical scrolling */
-    overflow: auto;
-    position: relative;
-    touch-action: pan-y;
+    overflow: hidden;
+    position: fixed;
+    touch-action: none;
+    -webkit-overflow-scrolling: touch;
+  }
+
+  .scrollable-content {
+    width: 100%;
+    height: 100%;
+    overflow-y: scroll;
+    -webkit-overflow-scrolling: touch;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
   }
 }
 
